[package]
name = "async-liveliness-monitor"
version = "0.1.1"
edition = "2021"
authors = ["Pierre Avital <pierre.avital@gmail.com>"]
description = "A Liveliness Monitor for your Asynchronous Runtimes"
license = "MIT"
repository = "https://github.com/p-avital/liveliness-monitor"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
palaver = "0.2.8"
